--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.24.0",
     "morgan": "~1.9.1",
+    "officegen": "^0.6.2",
     "pptxgenjs": "^2.5.0",
     "textract": "^2.5.0"
   }
